fix: message bubble bleed + clear input bar on message send + cookie auth

--- a/src/assets/css/_config.css
+++ b/src/assets/css/_config.css
@@ -6,6 +6,7 @@
 	--color-dark-gray: #d5d5d5;
 	--color-background: #EFEFEF;
 	--color-primary: #336E8D;
+	--color-primary: purple;
 	--color-alert: #FA3E3E;
 
 	--toolbar-height: 60px;
